# emc_system

./: CMakeLists.txt  README.md  package.xml  parameters.yaml  rosdoc.yaml
config/: hero_mrc_config.yaml  rosbot_mrc_config.yaml
examples/: example01.cpp  example02.cpp  example03.cpp  example1.cpp  test_io.cpp  test_maploader.cpp  test_publisher.cpp  test_sendpath.cpp  test_sendpose.cpp  test_subscriber.cpp
include/emc/: bumper.h  communication.h  data.h  engine.h  fsm.h  io.h  maploader.h  odom.h  pose.h  rate.h  ros2publisher.h  ros2subscriber.h  system.h
launch/: client.launch.py  hero.rviz  hero_rviz.launch  hero_rviz.py  rosbot.rviz  rosbot_rviz.launch  rviz2.launch.py
msg/: controlEffort.msg
scripts/: talker.py  teleop.py
src/: communication.cpp  data.cpp  engine.cpp  fsm.cpp  io.cpp  maploader.cpp  pose_tf2_broadcaster.cpp  rate.cpp  system.cpp
test/: io.test  test_io.cpp  testbot_mrc_config.yaml  testspeech.cpp
tools/: visualize.cpp
