<?xml version="2.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>emc_system</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>

</package>
